<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EasyRent</string>
    <string name="action_settings">Settings</string>
    <string name="db_name">project.db</string>
    <string name="apartmentsBtn">Available Apartments</string>
    <string name="title_showapartments">Available Apartments</string>
    <string name="price">Price</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="price_d">Price:</string>
    <string name="address_d">Address:</string>
    <string name="city_d">City:</string>
    <string name="state_d">State:</string>
    <string name="zip_d">Zip:</string>
    <string name="area_d">Square Footage:</string>
    <string name="bedrooms_d">Bedrooms:</string>
    <string name="bathrooms_d">Bathrooms:</string>
    <string name="amenities_d">Amenities:</string>
    <string name="requestsBtn">Service Requests</string>
    <string name="openRequestsBtn">Open Requests</string>
    <string name="paidRequestsBtn">Paid Requests</string>
    <string name="createRequestBtn">Create Request</string>
    <string name="issue">Issue</string>
    <string name="requestdate">Request Date</string>
    <string name="estimatedtime">Estimated Time</string>
    <string name="ispriority">Priority?</string>
    <string name="apartmentid">Apt ID</string>
    <string name="serviceperson">Service Person</string>
    <string name="issue_d">Issue:</string>
    <string name="describe">Describe the issue</string>
    <string name="requestdate_d">Request Date:</string>
    <string name="fixeddate_d">Fixed Date:</string>
    <string name="estimatedtime_d">Estimated Time:</string>
    <string name="actualtime_d">Actual Time:</string>
    <string name="ispriority_d">Priority?:</string>
    <string name="serviceperson_d">Service Person:</string>
    <string name="apid_d">Apartment ID:</string>
    <string name="updateReqBtn">Update Request</string>
    <string name="noapartments">No available apartments found!</string>
    <string name="norequests">No open requests found!</string>
    <string name="filterstate">Filter by state:</string>
    <string name="logo">Logo</string>
    <string name="title_findapartment">Select your apartment</string>
    <string name="zipcode">Zip Code</string>
    <string name="findBtn">Find</string>
    <string name="notfound">No apartment found for that zip code</string>
    <string name="address">Address</string>
    <string name="apartmentnumber">#</string>
    <string name="createBtn">Create</string>
    <string name="signin">Sign In</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="hello_world">Hello world!</string>
 	<string name="home">Home</string>
    <string name="floorplans">Floor Plans</string>
    <string name="aptpic">Apartments</string>
    <string name="maintenancerequest">Maintenance Request</string>
    <string name="employeelogin">Employee login</string>
</resources>
