<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/openRequestsBtn"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/issue"
            android:textColor="#0000FF"
            android:textSize="15sp" />
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/requestdate"
            android:textColor="#0000FF"
            android:textSize="15sp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/estimatedtime"
            android:textColor="#0000FF"
            android:textSize="15sp" />
        
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ispriority"
            android:textColor="#0000FF"
            android:textSize="15sp" />
        
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/apartmentid"
            android:textColor="#0000FF"
            android:textSize="15sp" />
        
    </LinearLayout>

    <ListView
        android:id="@+id/openrequests_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>
    
    <TextView
        android:id="@+id/emptyrequests"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/norequests"
        android:textSize="15sp" />
    
</LinearLayout>
