<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.wpi.easyrent.HomeActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/apartmentsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/apartmentsBtn"
        android:textColor="@android:color/white"
        android:background="@color/blue" />
    
    <Button
        android:id="@+id/createRequestBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/apartmentsBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/createRequestBtn"
        android:textColor="@android:color/white"
        android:background="@color/blue" />
    
    <Button
        android:id="@+id/requestsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/requestsBtn"
        android:textColor="@android:color/white"
        android:background="@color/blue" />
    
</RelativeLayout>