<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.wpi.easyrent.HomeActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/requestsBtn"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/blue" />

    <Button
        android:id="@+id/openRequestsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/openRequestsBtn"
        android:textColor="@android:color/white"
        android:background="@color/blue" />
    
    <Button
        android:id="@+id/paidRequestsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/openRequestsBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/paidRequestsBtn"
        android:textColor="@android:color/white"
        android:background="@color/blue" />
    
</RelativeLayout>