<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/issue_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:layout_marginLeft="20dp"
        	android:layout_marginStart="20dp"
        	android:layout_marginTop="15dp"
            android:textSize="22sp"
            android:text="@string/issue_d" />

        <EditText
            android:id="@+id/issue_v"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
        	android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:hint="@string/describe" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ispriority_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:layout_marginLeft="20dp"
        	android:layout_marginStart="20dp"
        	android:layout_marginTop="15dp"
            android:textSize="22sp"
            android:text="@string/ispriority_d" />

        <CheckBox
            android:id="@+id/ispriority_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
        	android:layout_marginStart="20dp"
        	android:layout_marginTop="15dp"
            android:text="" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >
		
        <Button
            android:id="@+id/createBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createBtn" />
        
    </LinearLayout>

    

</LinearLayout>
